tests/solidity/bad/optaliased.sol
// SPDX-License-Identifier: MIT
pragma solidity ^0.8.0;

contract Test {
    function echidna_opt_test() public view returns (bool) {
        return true;
    }
}
